Add weight field to pet entity
