# src/main/resources/openapi.yml
@@ -1955,6 +1955,12 @@ components:
           example: '2010-09-07'
         type:
           $ref: '#/components/schemas/PetType'
+        weight:
+          title: Weight
+          description: The weight of the pet in kg.
+          type: number
+          nullable: true
+          example: 15.75
       required:
         - name
         - birthDate
